--- a/app/project/templates/add_cloud.html
+++ b/app/project/templates/add_cloud.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% block title %}Add Item{% endblock %}
+{% block title %}Add Cloud instance{% endblock %}
 {% from "_formshelper.html" import render_field %}
 {% block content %}
 
@@ -11,13 +11,21 @@
           {{ form.Hostname.label }}
           {{ render_field(form.Hostname, class="form-control") }}
         </div>
-        <div class="form-group">
-          {{ form.Plan.label }}
-          {{ render_field(form.Plan, class="form-control") }}
+        <div class="form-group"> <!-- Plan을 DB 에서 가져와야해..-->
+          <label for="planlist">Plan 선택</label>
+          <select class="form-control" name="plan" id="">
+            {% for o in planlist %}
+             <option value="{{ o.id }}">{{ o.plan_name }}</option>
+            {% endfor %}
+          </select>
         </div>
         <div class="form-group">
-            {{ form.os.label }}
-            {{ render_field(form.os, class="form-control") }}
+            <label for="oslist">OS 선택</label>
+            <select class="form-control" name="os" id="">
+              {% for o in oslist %}
+              <option value="{{ o.id }}">{{ o.os_name }}</option>
+              {% endfor %}
+            </select> 
           </div>
         <input type="submit" value="Add Item" class="btn btn-lg btn-success">
     </form>
