javascript 함수가 겹치지 않도록 설계

--- a/templates/_left-side.html
+++ b/templates/_left-side.html
@@ -17,6 +17,11 @@
                       <span class="item-text">대시보드</span>
                    </a>
                 </li>
+                <li>
+                  <a onclick="return route('price_view')"  title="priceview" data-toggle="" class="no-submenu">
+                     <span class="item-text">PriceView</span>
+                  </a>
+               </li>
                 <!-- <li>
                    <a onclick="return route('cloud_list')"  title="Login" data-toggle="" class="no-submenu">
                       <span class="item-text">클라우드</span>
