--- a/views/cloud_add.html
+++ b/views/cloud_add.html
@@ -30,7 +30,7 @@
         </div>
      </div>
      <div class="row">
-      <button onclick="return create_instance()"> 클라우드 추가</button>
+      <button onclick="return cloud_add.create()"> 클라우드 추가</button>
      </div>
     </div>
     
