--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -13,7 +13,7 @@
         
     </div>
 
-    <button onclick="return add_cloud()" class="add">add cloud</button>
+    <button onclick="return dashboard.add_cloud()" class="add">add cloud</button>
 </div>
 <!-- END Page content-->
 <!-- START Page footer-->
