--- a/views/cloud_list.html
+++ b/views/cloud_list.html
@@ -5,7 +5,7 @@
                <br>
                <small>Bootstrap Responsive tables</small>
             </h3>
- 
+            <button onclick="return cloud_list.add()">클라우드 추가</button>
             <!-- START row-->
             <div class="row">
                <div class="col-lg-12">
