keypair 뷰 추가, Cloud 추가 테스트 완료,VPC 연동 해야함

--- a/app/project/templates/_base.html
+++ b/app/project/templates/_base.html
@@ -23,6 +23,9 @@
           <li class="nav-item {% if request.path == url_for('home') %}active{% endif %}">
             <a class="nav-link" href="{{ url_for('home') }}">Home</a>
           </li>
+          <li class="nav-item {% if request.path == url_for('keypair.all_keypairs') %}active{% endif %}">
+            <a class="nav-link" href="{{ url_for('keypair.all_keypairs') }}">keypairs</a>
+          </li> 
           <li class="nav-item {% if request.path == url_for('cloud.all_clouds') %}active{% endif %}">
             <a class="nav-link" href="{{ url_for('cloud.all_clouds') }}">Cloud Instances</a>
           </li> 
