--- a/app/project/templates/all_clouds.html
+++ b/app/project/templates/all_clouds.html
@@ -52,8 +52,8 @@
       </td> 
 
       <td>
-        <a href="{{ url_for('cloud.update_cloud', items_id=cloud.id) }}">Edit</a>
-        <a href="{{ url_for('cloud.delete_cloud', items_id=cloud.id) }}">Delete</a>
+        <a href="{{ url_for('cloud.update_cloud', items_id=item.id) }}">Edit</a>
+        <a href="{{ url_for('cloud.delete_cloud', items_id=item.id) }}">Delete</a>
       </td>
       
     </tr>
