--- a/app/project/templates/cloud_detail.html
+++ b/app/project/templates/cloud_detail.html
@@ -5,9 +5,23 @@
 
 <div class="row">
   <div class="col-md-12">
-     Test
+     <h2>Information</h2>
+      <p>Cloud Public IP : {{ cloud["Reservations"][0]["Instances"][0]["PublicIpAddress"]}}</p>
+      <p>Cloud Private IP : {{ cloud["Reservations"][0]["Instances"][0]["PrivateIpAddress"]}}</p>
+      <p>Architecture :  {{ cloud["Reservations"][0]["Instances"][0]["Architecture"]}} </p>
+      <p>PrivateDnsName :  {{ cloud["Reservations"][0]["Instances"][0]["PrivateDnsName"]}} </p>
   </div>
-   
+  <div class="col-md-12">
+      <h2>Console Status</h2>
+      <img width="100" height="100" src="">
+  </div>
+  <div class="col-md-12">
+    <h2>Console Logs</h2>
+    <pre>
+      awefawefawe
+    </pre>
+</div>
+
 </div>
 
 {% endblock %}
