cloud_add, cloud_list, dashboard init.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1961,7 +1961,7 @@ x:-o-prefocus,
   border: 1px solid #0094cb;
 }
 .point-outline.point-success {
-  border: 1px solid #7bbf62;
+  border: 1px solid #7bbc62;
 }
 .point-outline.point-info {
   border: 1px solid #3babc8;
