--- a/views/cloud_list.html
+++ b/views/cloud_list.html
@@ -1,45 +1,42 @@
+   <style>  
  
+   </style>  
          <!-- START Page content-->
          <div class="main-content">
-            <h3>Tables
+            <h3>Server Status (cloud_list)
                <br>
                <small>Bootstrap Responsive tables</small>
             </h3>
-            <button onclick="return cloud_list.add()">클라우드 추가</button>
             <!-- START row-->
             <div class="row">
                <div class="col-lg-12">
                   <div class="panel panel-default">
-                     <div class="panel-heading">Hover Rows</div>
+                     <!-- <div class="panel-heading">Hover Rows</div> -->
                      <div class="panel-body">
                         <div class="table-responsive">
                            <table class="table table-hover">
                               <thead>
                                  <tr>
-                                    <th>#</th>
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Username</th>
+                                    <th>Server Name</th>
+                                    <th>Last Changed</th>
+                                    <th>Status</th>
                                  </tr>
                               </thead>
                               <tbody>
                                  <tr>
-                                    <td>1</td>
                                     <td>Mark</td>
+                                    <td>2021-02-06 12:33</td>
+                                    <td>Current</td>
+                                 </tr>
+                                 <tr>
                                     <td>Otto</td>
+                                    <td>45분전</td>
+                                    <td>failure</td>
+                                 </tr>
+                                 <tr>
                                     <td>@mdo</td>
-                                 </tr>
-                                 <tr>
-                                    <td>2</td>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                 </tr>
-                                 <tr>
-                                    <td>3</td>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
+                                    <td>28 days 8 hours</td>
+                                    <td>Ok</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -50,6 +47,11 @@
                 
             </div>
             <!-- END row-->
+            <div class="container">
+               <button onclick="return cloud_list.add()" class="btn" style="align-items: center;">클라우드 추가</button>
+            </div>
+            
+
          </div>
          <!-- END Page content-->
          <!-- START Page footer-->
