--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,19 +1,48 @@
 <!-- START Page content-->
+
 <div class="main-content">
-    <h3>Page title
+    <h3>DASHBOARD
         <br>
         <small>Subtitle</small>
     </h3>
+
+    <button onclick="return dashboard.move_view()"> dashboard.move_view </button>
+
     <div class="row">
         <div class="col-lg-12">
-            <p>A row with content</p>
+            <p>인스턴스가 아직 없습니다. 클라우드를 새로 만드세요</p>
         </div>
-    </div>
-    <div class="test-css">
-        
+        <p>이렇게 표현하는게 더 좋을듯 , 만약 서버 있다면 바로 cloud_list </p>
+        <div class="panel-body">
+            <div class="table-responsive">
+               <table class="table table-hover">
+                  <thead>
+                     <tr>
+                        <th>Server Name</th>
+                        <th>Last Changed</th>
+                        <th>Status</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>No Server</td>
+                     </tr>
+                     <!-- <tr>
+                        <td>Otto</td>
+                     </tr>
+                     <tr>
+                        <td></td>
+                     </tr> -->
+                  </tbody>
+               </table>
+            </div>
+         </div>
+
+
     </div>
 
-    <button onclick="return dashboard.add_cloud()" class="add">add cloud</button>
+
+    <button onclick="return dashboard.add_cloud()" class="btn">add cloud</button>
 </div>
 <!-- END Page content-->
 <!-- START Page footer-->
