--- a/views/cloud_list.html
+++ b/views/cloud_list.html
@@ -48,7 +48,7 @@
             </div>
             <!-- END row-->
             <div class="container">
-               <button onclick="return cloud_list.add()" class="btn" style="align-items: center;">클라우드 추가</button>
+               <button onclick="return cloud_list.add()" class="mainbtn" style="align-items: center;">클라우드 추가</button>
             </div>
             
 
