--- a/views/cloud_add.html
+++ b/views/cloud_add.html
@@ -19,7 +19,8 @@
               <p id="option_detail">1GB RAM</p>
               <p id="option_detail">30GB SSD</p>
               <p id="option_detail">1TB</p>
-              <a href="#go_plan" class="btn" >select</a>
+              <br>
+              <a href="#go_plan" class="mainbtn" >select</a>
             </div>
         </div>
         <div class="col-lg-3">
@@ -28,7 +29,8 @@
                <p id="option_detail">2GB RAM</p>
                <p id="option_detail">30GB SSD</p>
                <p id="option_detail">1TB</p>
-               <a href="#go_plan" class="btn" >select</a>
+               <br>
+               <a href="#go_plan" class="mainbtn">select</a>
             </div>
         </div>
         <div class="col-lg-3">
@@ -37,7 +39,8 @@
                <p id="option_detail">4GB RAM</p>
                <p id="option_detail">30GB SSD</p>
                <p id="option_detail">1TB</p>
-               <a href="#go_plan" class="btn" >select</a>
+               <br>
+               <a href="#go_plan" class="mainbtn" >select</a>
             </div>
         </div> 
         <div class="col-lg-3">
@@ -46,7 +49,8 @@
                <p id="option_detail">6GB RAM</p>
                <p id="option_detail">30GB SSD</p>
                <p id="option_detail">1TB</p>
-               <a href="#go_plan" class="btn" >select</a>
+               <br>
+               <a href="#go_plan" class="mainbtn" >select</a>
             </div>        
          </div> 
      </div>
@@ -88,7 +92,6 @@
     </div>
     
 
-    <!-- END Page content-->
-    <!-- START Page footer-->
+    
     <footer>&copy; 2014 - Wintermin</footer>
 </div>
