--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,4 +1,3 @@
-<!-- START Page content-->
 
 <div class="main-content">
     <h3>DASHBOARD
@@ -6,8 +5,8 @@
         <small>Subtitle</small>
     </h3>
 
-    <button onclick="return dashboard.move_view()"> dashboard.move_view </button>
-
+    <a href="pages/login.html"><button>login</button></a>
+    
     <div class="row">
         <div class="col-lg-12">
             <p>인스턴스가 아직 없습니다. 클라우드를 새로 만드세요</p>
@@ -27,12 +26,6 @@
                      <tr>
                         <td>No Server</td>
                      </tr>
-                     <!-- <tr>
-                        <td>Otto</td>
-                     </tr>
-                     <tr>
-                        <td></td>
-                     </tr> -->
                   </tbody>
                </table>
             </div>
@@ -42,9 +35,7 @@
     </div>
 
 
-    <button onclick="return dashboard.add_cloud()" class="btn">add cloud</button>
+    <button onclick="return dashboard.add_cloud()" class="mainbtn">add cloud</button>
 </div>
-<!-- END Page content-->
-<!-- START Page footer-->
+
 <footer>&copy; 2014 - Wintermin</footer>
-<!-- END Page Footer--> 
