onclick= 대신 a href='#뷰이름' 으로 페이지 라우팅 되게 구현, 단 뷰이름에 - 글자가 있으면 예외

--- a/views/cloudadd.html
+++ b/views/cloudadd.html
@@ -20,7 +20,7 @@
               <p id="option_detail">30GB SSD</p>
               <p id="option_detail">1TB</p>
               <br>
-              <a href="#go_plan" class="mainbtn" >select</a>
+              <a href="#go-plan" class="mainbtn" >select</a>
             </div>
         </div>
         <div class="col-lg-3">
@@ -30,7 +30,7 @@
                <p id="option_detail">30GB SSD</p>
                <p id="option_detail">1TB</p>
                <br>
-               <a href="#go_plan" class="mainbtn">select</a>
+               <a href="#go-plan" class="mainbtn">select</a>
             </div>
         </div>
         <div class="col-lg-3">
@@ -40,7 +40,7 @@
                <p id="option_detail">30GB SSD</p>
                <p id="option_detail">1TB</p>
                <br>
-               <a href="#go_plan" class="mainbtn" >select</a>
+               <a href="#go-plan" class="mainbtn" >select</a>
             </div>
         </div> 
         <div class="col-lg-3">
@@ -50,13 +50,13 @@
                <p id="option_detail">30GB SSD</p>
                <p id="option_detail">1TB</p>
                <br>
-               <a href="#go_plan" class="mainbtn" >select</a>
+               <a href="#go-plan" class="mainbtn" >select</a>
             </div>        
          </div> 
      </div>
 
 
-     <div id="go_plan" class="row">
+     <div id="go-plan" class="row">
          <div class="col-lg-12">
             <h3 style="padding-bottom: 10px;">서버이름과 호스트명을 입력해주세요</h3>
          </div>
@@ -87,7 +87,7 @@
 
 
      <div class="row">
-      <button onclick="return cloud_add.create()" class="opbtn" style="padding-left: 25px; padding-right: 25px; padding-top: 10px;padding-bottom: 10px; margin-bottom: 50px;"> 서버 생성 </button>
+      <a href="#cloudlist" class="opbtn" style="padding-left: 25px; padding-right: 25px; padding-top: 10px;padding-bottom: 10px; margin-bottom: 50px;"> 서버 생성 </a>
      </div>
     </div>
     
