--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -35,7 +35,7 @@
     </div>
 
 
-    <button onclick="return dashboard.add_cloud()" class="mainbtn">add cloud</button>
+    <a href="#cloudadd" class="mainbtn">add cloud</a>
 </div>
 
 <footer>&copy; 2014 - Wintermin</footer>
