--- a/templates/_left-side.html
+++ b/templates/_left-side.html
@@ -13,12 +13,12 @@
              <!-- START SubMenu item-->
              <ul class="nav collapse in">
                 <li>
-                   <a onclick="return route('dashboard')"  title="Landing" data-toggle="" class="no-submenu">
+                   <a href="#dashboard" title="Landing" data-toggle="" class="no-submenu">
                       <span class="item-text">대시보드</span>
                    </a>
                 </li>
                 <li>
-                  <a onclick="return route('price_view')"  title="priceview" data-toggle="" class="no-submenu">
+                  <a href="#priceview" title="priceview" data-toggle="" class="no-submenu">
                      <span class="item-text">PriceView</span>
                   </a>
                </li>
