--- a/app/project/templates/_base.html
+++ b/app/project/templates/_base.html
@@ -38,6 +38,7 @@
               <a class="dropdown-item" href="{{ url_for('cloud.all_clouds') }}">Cloud Instances</a>
               <a class="dropdown-item" href="{{ url_for('keypair.all_keypairs') }}">Key pair</a> 
               <div class="dropdown-divider"></div> 
+              <a class="dropdown-item" href="{{ url_for('secgroup.all_secgroup') }}">보안그룹</a> 
             </div>
           </li>
 
